--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "gatsby-plugin-react-helmet": "3.3.4",
     "gatsby-plugin-sharp": "2.6.11",
     "gatsby-plugin-styled-components": "3.3.4",
-    "gatsby-source-filesystem": "2.3.11",
+    "gatsby-source-filesystem": "^2.3.10",
     "gatsby-source-notionso": "^1.1.6",
     "gatsby-transformer-sharp": "2.5.5",
+    "highlight.js": "^9.17.1",
     "prop-types": "15.7.2",
     "react": "16.12.0",
     "react-awesome-styled-grid": "3.0.7",
